--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,14 @@
         android:id="@+id/pt_restart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="reStart"
+        android:onClick="restart"
+        android:layout_gravity="center"
+        android:text="@string/restart"/>
+    <Button
+        android:id="@+id/suspend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="restart"
         android:layout_gravity="center"
         android:text="@string/restart"/>
     <ImageView
